# fara-action

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: console.rs  hls.rs  main.rs  menu.rs  menu_list.rs  site.rs  watermark.rs
