[package]
name = "fara_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
native-dialog = "0.6.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
