[package]
name = "fara_action"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.27.0"
#crypto = "0.5.1"
md5 = "0.7.0"
native-dialog = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
